update instructions & header

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#"><i class="fa fa-home"></i> Home</a></li>
         <li><a href="#page2"><i class="fa fa-shield"></i> Page 2</a></li>
+        <li><a href="https://github.com/mmouterde/ngLeak"><i class="fa fa-github"></i> Github</a></li>
+        <li><a href="http://embed.plnkr.co/2lzsbYARHVpFy2H9eAVA/preview">Plunker</a></li>
       </ul>
     </div>
   </nav>
